<resources>
    <string name="default_notification_channel_id">com.wgroup.woooo.urgent</string>
    <string name="action_settings">Settings</string>
    <string name="app_server">chat.woooo.world</string>
    <string name="action_accounts">Manage account</string>
    <string name="action_account">Manage account</string>
    <string name="action_contact_details">Contact details</string>
    <string name="action_muc_details">Group chat details</string>
    <string name="channel_details">Channel details</string>
    <string name="action_add_account">Add account</string>
    <string name="action_edit_contact">Edit name</string>
    <string name="action_add_phone_book">Add to address book</string>
    <string name="action_delete_contact">Delete contact</string>
    <string name="action_block_contact">Block contact</string>
    <string name="action_unblock_contact">Unblock contact</string>
    <string name="action_block_domain">Block domain</string>
    <string name="action_unblock_domain">Unblock domain</string>
    <string name="action_block_participant">Block participant</string>
    <string name="action_unblock_participant">Unblock participant</string>
    <string name="title_activity_manage_accounts">Manage Account</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_sharewith">Share with Conversation</string>
    <string name="title_activity_start_conversation">Start Conversation</string>
    <string name="title_activity_choose_contact">Choose Contact</string>
    <string name="title_activity_choose_contacts">Choose Contacts</string>
    <string name="title_activity_share_via_account">Share via account</string>
    <string name="title_activity_block_list">Block list</string>
    <string name="just_now">just now</string>
    <string name="minute_ago">1 min ago</string>
    <string name="minutes_ago">%d mins ago</string>
    <plurals name="x_unread_conversations">
        <item quantity="one">%d unread conversation</item>
        <item quantity="other">%d unread conversations</item>

    </plurals>
    <string name="sending">sending…</string>
    <string name="message_decrypting">Decrypting message. Please wait…</string>
    <string name="pgp_message">OpenPGP encrypted message</string>
    <string name="nick_in_use">Nickname is already in use</string>
    <string name="invalid_muc_nick">Invalid nickname</string>
    <string name="admin">Admin</string>
    <string name="owner">Owner</string>
    <string name="moderator">Moderator</string>
    <string name="participant">Participant</string>
    <string name="visitor">Visitor</string>
    <string name="remove_contact_text">Would you like to remove %s from your contact list? Conversations with this contact will not be removed.</string>
    <string name="block_contact_text">Would you like to block %s from sending you messages?</string>
    <string name="unblock_contact_text">Would you like to unblock %s and allow them to send you messages?</string>
    <string name="block_domain_text">Block all contacts from %s?</string>
    <string name="unblock_domain_text">Unblock all contacts from %s?</string>
    <string name="contact_blocked">Contact blocked</string>
    <string name="blocked">Blocked</string>
    <string name="remove_bookmark_text">Would you like to remove %s as a bookmark? Conversations with this bookmark will not be removed.</string>
    <string name="change_password_on_server">Change password on server</string>
    <string name="share_with">Share with…</string>
    <string name="start_conversation">Start conversation</string>
    <string name="invite_contact">Invite contact</string>
    <string name="invite">Invite</string>
    <string name="contacts">Contacts</string>
    <string name="contact_list">Contact list</string>
    <string name="contact">Contact</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="crash_report_title">%1$s has crashed</string>
    <string name="crash_report_message">Using your XMPP account to send in stack traces helps the ongoing development of %1$s.</string>
    <string name="send_now">Send now</string>
    <string name="send_never">Never ask again</string>
    <string name="problem_connecting_to_account">Could not connect to account</string>
    <string name="problem_connecting_to_accounts">Could not connect to multiple accounts</string>
    <string name="touch_to_fix">Tap to manage your accounts</string>
    <string name="not_in_roster">Add this missing contact to your contact list?</string>
    <string name="add_contact">Add contact</string>
    <string name="send_failed">delivery failed</string>
    <string name="preparing_image">Getting ready to send image</string>
    <string name="clear_conversation_history">Clear Conversation History</string>
    <string name="clear_histor_msg">Do you want to delete all messages in this conversation?\n\n<b>Warning:</b> This will not influence messages stored on other devices or servers.</string>
    <string name="delete_file_dialog">Delete file</string>
    <string name="delete_file_dialog_msg">Are you sure you want to delete this file?\n\n<b>Warning:</b> This will not delete copies of this file that are stored on other devices or servers. </string>
    <string name="also_end_conversation">Close this conversation afterwards</string>
    <string name="choose_presence">Choose device</string>
    <string name="send_unencrypted_message">Send unencrypted message</string>
    <string name="send_message">Send message</string>
    <string name="send_message_to_x">Send message to %s</string>
    <string name="your_nick_has_been_changed">New nickname in use</string>
    <string name="send_unencrypted">Send unencrypted</string>
    <string name="decryption_failed">Decryption failed. Maybe you don’t have the proper private key.</string>
    <string name="openkeychain_required">OpenKeychain</string>
    <string name="openkeychain_required_long"><![CDATA[%1$s uses <b>OpenKeychain</b> to encrypt and decrypt messages and manage your public keys.<br><br>It is licensed under GPLv3+ and available on F-Droid and Google Play.<br><br><small>(Please restart %1$s afterwards.)</small>]]></string>
    <string name="restart">Restart</string>
    <string name="install">Install</string>
    <string name="offering">offering…</string>
    <string name="waiting">waiting…</string>
    <string name="no_pgp_key">No OpenPGP Key found</string>
    <string name="contact_has_no_pgp_key">Could not encrypt your message because your contact is not announcing their public key.\n\n<small>Please ask your contact to set up OpenPGP.</small></string>
    <string name="no_pgp_keys">No OpenPGP Keys found</string>
    <string name="contacts_have_no_pgp_keys">Could not encrypt your message because your contacts are not announcing their public keys.\n\n<small>Please ask them to set up OpenPGP.</small></string>
    <string name="pref_general">General</string>
    <string name="pref_accept_files">File Size</string>
    <string name="pref_accept_files_summary">Automatically Accept Files Smaller Than Your Preferred Size.</string>
    <string name="pref_attachments">Add-ons</string>
    <string name="pref_notification_settings">Notification</string>
    <string name="pref_vibrate">Vibrate</string>
    <string name="pref_vibrate_summary">Vibrate when a new message arrives</string>
    <string name="pref_led">LED Notification</string>
    <string name="pref_led_summary">Blink notification light when a new message arrives</string>
    <string name="pref_ringtone">Notification Tone</string>
    <string name="pref_notification_sound">Notification sound</string>
    <string name="pref_notification_sound_summary">Notification sound for new messages</string>
    <string name="pref_call_ringtone_summary">Customize Your Notification Ringtone Settings.</string>
    <string name="pref_notification_grace_period">Notification Silence Duration:</string>
    <string name="pref_notification_grace_period_summary">The Period After Detecting Activity on Another Device.</string>
    <string name="pref_advanced_options">Advanced</string>
    <string name="pref_never_send_crash">Disable Sending Crash Reports</string>
    <string name="pref_never_send_crash_summary">Contribute to Development: Help by Sending in Stack Traces. You can also take control of data sharing if you click here. This will stop sending application errors and crash reports to us.</string>
    <string name="pref_confirm_messages">Read Receipts</string>
    <string name="pref_confirm_messages_summary">Let your contacts know when you have received and read their messages</string>
    <string name="pref_prevent_screenshots">Block Captures</string>
    <string name="disable_notifications">Disable notifications</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="search_messages">Search messages</string>
    <string name="make_call">Make call</string>
    <string name="audio_call">Audio call</string>
    <string name="video_call">Video call</string>
    <string name="return_to_ongoing_call">Return to ongoing call</string>
    <string name="add_to_favorites">Pin to top</string>
    <string name="encrypted_with_omemo">Encrypted with ARMORED</string>
    <string name="room_header">Room</string>
    <string name="device_header">Device</string>
    <string name="room_id">roomId</string>
    <string name="peer_id">peerId</string>
    <string name="display_name">displayName</string>
    <string name="force_tcp">forceTcp</string>
    <string name="force_h264">forceH264</string>
    <string name="produce">produce</string>
    <string name="consume">consume</string>
    <string name="dataChannel">dataChannel</string>
    <string name="force_vp9">forceVP9</string>
    <string name="camera">camera</string>
    <string name="copy_wallet_address">Copy Wallet Address</string>
    <string name="rename_this_wallet_action">Rename This Wallet</string>
    <string name="seekbar_max">Max</string>
    <string name="action_confirm">Confirm</string>
    <string name="title_import">Import Wallet</string>
    <string name="enter_seed_phrase">Enter seed phrase</string>
    <string name="seed_phrase_conversion_message">If your seed phrase is not in English, please convert it to English on your own using tools like this https://iancoleman.io/bip39/</string>
    <string name="title_back_up_your_wallet">Create A Wallet Backu</string>
    <string name="nudge_user_to_backup_wallet">Your funds will be at risk if you do not back up before using your wallet.</string>
    <string name="action_close">Close</string>
    <string name="title_show_wallet_address">Display My Wallet Address</string>
    <string name="add_hide_tokens">Add / Hide Tokens</string>
    <string name="speed_gas">Speed (Gas)</string>
    <string name="speed_average">Standard</string>
    <string name="speed_too_low">Too Low</string>
    <string name="insufficient_gas">Insufficient Gas</string>
    <string name="title_dialog_what_testnet">What is Testnet?</string>
    <string name="action_enable_testnet">Got it, enable Testnet</string>
    <string name="message_dialog_testnet">Testnets tokens are like \'Monopoly\' money. They have zero financial worth but are used by developers to try out new designs without needing to spend valuable coins.</string>
    <string name="text_speedup_note">Note that speeding up this transaction does not guarantee your original transaction will be accelerated. If your attempt is successful, you will be charged the miner fee as above.</string>
    <string name="input_amount_max" translatable="false">(max. %1$s)</string>
    <string name="select_amount">Select Amount</string>
</resources>