<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:src="@drawable/divider_ic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_16"
        android:orientation="horizontal"
        android:paddingStart="@dimen/standard_16"
        android:paddingEnd="@dimen/mini_4">

        <TextView
            style="@style/ConversationsTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/widget_label"
            android:gravity="start|center_vertical"
            android:lines="1"
            android:text="@string/speed_gas" />

        <LinearLayout
            android:id="@+id/layout_gas_warning"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/small_12"
            android:layout_weight="@integer/widget_content"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/tiny_8"
                android:src="@drawable/ic_red_warning" />

            <TextView
                android:id="@+id/text_warning"
                style="@style/ConversationsTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insufficient_gas"
                android:textColor="@color/red500" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_speed_warning"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/small_12"
            android:layout_weight="@integer/widget_content"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/tiny_8"
                android:src="@drawable/ic_red_warning" />

            <TextView
                android:id="@+id/text_speed_warning"
                style="@style/ConversationsTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed_too_low"
                android:textColor="@color/red500" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_speed"
            style="@style/ConversationsTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/small_12"
            android:layout_weight="@integer/widget_content"
            android:gravity="start"
            android:text="@string/speed_average" />

        <TextView
            android:id="@+id/edit_text"
            style="@style/ConversationsTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/widget_control"
            android:gravity="start"
            android:lines="1"
            android:orientation="horizontal"
            android:text="@string/edit"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/standard_16"
        android:orientation="horizontal"
        android:paddingStart="@dimen/standard_16"
        android:paddingEnd="@dimen/mini_4">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="@integer/widget_label" />

        <TextView
            android:id="@+id/text_time_estimate"
            style="@style/ConversationsTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/small_12"
            android:layout_marginTop="@dimen/mini_4"
            android:layout_weight="@integer/widget_content"
            android:gravity="start"
            tools:text="&lt; 0.003 ETH ($0.55 USD)≈2 minutes" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="@integer/widget_control" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_speedup_note"
        style="@style/ConversationsTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/standard_16"
        android:paddingBottom="@dimen/standard_16"
        android:textAlignment="center"
        android:visibility="gone"
        tools:text="@string/text_speedup_note"
        tools:visibility="visible" />

</LinearLayout>