<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/showcase_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/layout_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/giant_40"
        android:layout_marginEnd="@dimen/giant_40"
        app:cardCornerRadius="@dimen/dialog_corner_radius"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="@dimen/base_24"
            android:paddingTop="@dimen/large_32"
            android:paddingEnd="@dimen/base_24">

            <TextView
                style="@style/ConversationsTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/cozy_20"
                android:gravity="center_horizontal"
                android:text="@string/title_back_up_your_wallet" />

            <TextView
                style="@style/ConversationsTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/base_24"
                android:gravity="center_horizontal"
                android:text="@string/nudge_user_to_backup_wallet" />

            <Button
                android:id="@+id/btn_close"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/giant_40"
                android:text="@string/action_close" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_below="@id/layout_card"
        android:layout_alignEnd="@id/layout_card"
        android:layout_marginEnd="@dimen/small_12"
        android:rotation="180"
        android:src="@drawable/showcase_dialog_tail"
  />

</RelativeLayout>