<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_holding_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_holder"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/enter_seed_phrase"
            android:textAppearance="@style/TextAppearance.Conversations.Subhead" />


        <com.alphawallet.app.widget.PasswordInputView
            android:id="@+id/input_seed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@color/white"
            android:visibility="visible"
            custom:imeOptions="actionDone"
            custom:inputType="textNoSuggestions"
            custom:lines="6"
            custom:minHeightValue="170" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_suggestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tiny_8"
            android:layout_marginBottom="@dimen/tiny_8"
            android:visibility="gone" />

        <TextView
            android:id="@+id/text_non_english_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_24"
            android:layout_marginEnd="@dimen/base_24"
            android:autoLink="web"
            android:gravity="center_horizontal"
            android:linksClickable="true"
            android:text="@string/seed_phrase_conversion_message"
            android:textAppearance="@style/TextAppearance.Conversations.Body1" />

        <Button
            android:id="@+id/import_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_16"
            android:background="@drawable/button"
            android:text="@string/title_import"
            android:textAllCaps="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_marker"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:visibility="invisible" />
</RelativeLayout>
